package com.simpulator.game.language;

public enum Language {
    ENGLISH,
    VIETNAMESE,
    JAPANESE,
    CHINESE,
}
